Imagnes en linea

--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,12 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              {
+    "glob": "**/*",
+    "input": "src/assets",
+    "output": "/assets/"
+  }
             ],
             "styles": [
               "src/styles.scss"
