--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@fullcalendar/angular": "^6.1.19",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.3",
     "tslib": "^2.3.0",
