--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ testem.log
 .DS_Store
 Thumbs.db
 .firebase/hosting.ZGlzdFxQVFR1dG9yaWFDRVVURUNcYnJvd3Nlcg.cache
+.firebase/hosting.ZGlzdFxQVFR1dG9yaWFDRVVURUNcYnJvd3Nlcg.cache
