--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
+    "@angular/pwa": "^20.3.1",
     "@angular/router": "^20.1.0",
+    "@angular/service-worker": "^20.1.0",
     "@fullcalendar/angular": "^6.1.19",
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
